--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="" title="Blog" class="icon">&#111;</a></li>
                 <li><a href="https://twitter.com/nadudBot" title="Twitter" class="icon">&#108;</a></li>
                 <li><a href="https://soundcloud.com/ginsengcookie" title="Soundcloud" class="icon">&#33;</a></li>
+                <li><a href="https://github.com/ginsengcookie/ginsengcookie.github.io" title="Github" class="icon">&#103;</a></li>
             </ul>
         </section>
 
