--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <h1>ginsengcookie</h1>
 
-            <p id="epigraph">“애 젖 먹이면서 주방에 앉아서 ‘웰빙 진생쿠키를 만들었다’고 구글에 올리면 전세계에서 주문을 받을 수 있는데, 왜 젊은이들이 이렇게 어마어마한 가상세계가 있는데도 수동적으로 대응하느냐”<span class="origin">김성주(前 새누리당 공동 선거대책위원장)</span></p>
+            <blockquote id="epigraph">“애 젖 먹이면서 주방에 앉아서 ‘웰빙 진생쿠키를 만들었다’고 구글에 올리면 전세계에서 주문을 받을 수 있는데, 왜 젊은이들이 이렇게 어마어마한 가상세계가 있는데도 수동적으로 대응하느냐”<span class="origin"><a href="http://news.nate.com/view/20121016n16407">김성주</a>(前 새누리당 공동 선거대책위원장)</span></blockquote>
 
             <ul class="social">
                 <li><a href="http://blog.ginsengcookie.com/" title="Blog" class="icon">&#111;</a></li>
