--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>ginsengcookie</title>
         <link rel="stylesheet" href="resources/css/style.css">
+        <script src="resource/js/pace.min.js"></script>
         <!--[if lt IE 9]>
             <script type="text/javascript" src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <script type="text/javascript">
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-43472313-1', 'ginsengcookie.com');
+            ga('send', 'pageview');
+        </script>
     </head>
     <body>
         <section>
@@ -22,15 +32,5 @@
                 <li><a href="https://github.com/ginsengcookie/ginsengcookie.github.io" title="Github" class="icon">&#103;</a></li>
             </ul>
         </section>
-
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-            ga('create', 'UA-43472313-1', 'ginsengcookie.com');
-            ga('send', 'pageview');
-        </script>
     </body>
 </html>
