--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>ginsengcookie</title>
         <link rel="stylesheet" href="resources/css/style.css">
-        <script src="resource/js/pace.min.js"></script>
+        <script src="resources/js/pace.min.js"></script>
         <!--[if lt IE 9]>
             <script type="text/javascript" src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
