--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <section>
             <h1>ginsengcookie</h1>
 
-            <blockquote id="epigraph">“애 젖 먹이면서 주방에 앉아서 ‘웰빙 진생쿠키를 만들었다’고 구글에 올리면 전세계에서 주문을 받을 수 있는데, 왜 젊은이들이 이렇게 어마어마한 가상세계가 있는데도 수동적으로 대응하느냐”<span class="origin">&mdash; <a href="http://news.nate.com/view/20121016n16407">김성주</a><br />성주그룹 회장</blockquote>
+            <blockquote id="epigraph">“애 젖 먹이면서 주방에 앉아서 ‘웰빙 진생쿠키를 만들었다’고 구글에 올리면 전세계에서 주문을 받을 수 있는데, 왜 젊은이들이 이렇게 어마어마한 가상세계가 있는데도 수동적으로 대응하느냐”<span class="source">&mdash; <a href="http://news.nate.com/view/20121016n16407">김성주</a><br />성주그룹 회장</blockquote>
 
             <ul class="social">
                 <li><a href="http://blog.ginsengcookie.com/" title="Tumblr" class="icon">o</a></li>
