--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     .break-word { word-wrap: break-word; }
     .break-all { word-break: break-all; }
     .keep-all { word-break: keep-all; }
+    .muted { opacity: .5 }
     .btn:focus {
       outline: none;
       border-color: #ffe377;
@@ -56,32 +57,6 @@
           <blockquote class="m1 py4">
             <p class="h2 break-word keep-all">“애 젖 먹이면서 주방에 앉아서 ‘웰빙 진생쿠키를 만들었다’고 구글에 올리면 전세계에서 주문을 받을 수 있는데, 왜 젊은이들이 이렇게 어마어마한 가상세계가 있는데도 수동적으로 대응하느냐” &mdash; <a href="http://news.nate.com/view/20121016n16407">김성주</a>(성주그룹 회장)</p>
           </blockquote>
-          <!-- <section class="flex flex-wrap">
-            <div class="col-4 mb2">
-              <a href="#" class="btn block p1">
-                <h2 class="h2 bold m0 p0">Project Name</h2>
-                <p class="m0 p0">Project Description</p>
-              </a>
-            </div>
-            <div class="col-4 mb2">
-              <a href="#" class="btn block p1">
-                <h2 class="h2 bold m0 p0">Project Name</h2>
-                <p class="m0 p0">Project Description</p>
-              </a>
-            </div>
-            <div class="col-4 mb2">
-              <a href="#" class="btn block p1">
-                <h2 class="h2 bold m0 p0">Project Name</h2>
-                <p class="m0 p0">Project Description</p>
-              </a>
-            </div>
-            <div class="col-4 mb2">
-              <a href="#" class="btn block p1">
-                <h2 class="h2 bold m0 p0">Project Name</h2>
-                <p class="m0 p0">Project Description</p>
-              </a>
-            </div>
-          </section> //-->
         </div>
       </main>
     </div>
